--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    
+    <div class="header">
+        <div class="logo-container">
+            <div class="1c-logo">
+                <img src="./img/logo/red_on_white_sized.png" alt="Логитип 1с" class="logo-container-img-1c">
+            </div>
+            <div class="algotitm-logo">
+                <img src="./img/algoritmlogored.png" alt="Логитип АлгорИТм" class="logo-container-img-algoritm">
+            </div>
+        </div>
+        <div class="info-container">
+            <div class="info-container-top">
+                <p class="additional-text mrgn10">8:30 – 17:30 (MSK)</p>
+                <p class="bold">8 921 716-88-99</p>
+            </div>
+            <div class="info-container-bot">
+                <a href="#" class="links bold">Тарифы и услуги</a>
+                <a href="#" class="links bold">О нас</a>
+                <a href="#" class="links bold">Отзывы</a>
+                <a href="#" class="links bold">Контакты</a>
+            </div>
+        </div>
+    </div>
+    <div class="main-content"></div>
+    <div class="footer"></div>
 </body>
 </html>
