Header link to main
Добавлена ссылка на главную страницу в хедере

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo-container">
-            <div class="1c-logo">
-                <img src="./img/logo/red_on_white_sized_2.png" alt="Логитип 1с" class="logo-container-img-1c">
+        <a href="./index.html" style="text-decoration: none;">
+            <div class="logo-container">
+                <div class="1c-logo">
+                    <img src="./img/logo/red_on_white_sized_2.png" alt="Логитип 1с" class="logo-container-img-1c">
+                </div>
+                <div class="algotitm-logo">
+                    <img src="./img/algoritmlogored.png" alt="Логитип АлгорИТм" class="logo-container-img-algoritm">
+                </div>
             </div>
-            <div class="algotitm-logo">
-                <img src="./img/algoritmlogored.png" alt="Логитип АлгорИТм" class="logo-container-img-algoritm">
-            </div>
-        </div>
+        </a>
         <div class="info-container">
             <div class="info-container-top">
                 <p class="additional-text mrgn10">8:30 – 17:30 (MSK)</p>
