300px to 400px adaptive
Адаптивная вёрстка для телефонов с маленьким экраном

--- a/index.html
+++ b/index.html
@@ -21,14 +21,19 @@
         </a>
         <div class="info-container">
             <div class="info-container-top">
-                <p class="additional-text mrgn10">8:30 – 17:30 (MSK)</p>
-                <p class="bold">8 921 716-88-99</p>
+                <div class="1c-logo">
+                    <img src="./img/logo/red_on_white_sized_2.png" alt="Логитип 1с" class="logo-container-img-1c-top">
+                </div>
+                <div class="info-container-top-text">
+                    <p class="additional-text mrgn10">8:30 – 17:30 (MSK)</p>
+                    <p class="bold">8 921 716-88-99</p>
+                </div>
             </div>
             <div class="info-container-bot">
-                <a href="#" class="links bold">Тарифы и услуги</a>
+                <a href="#" class="links bold">Тарифы</a>
                 <a href="#" class="links bold">О нас</a>
                 <a href="#" class="links bold">Отзывы</a>
-                <a href="#" class="links bold">Контакты</a>
+                <a href="#" class="links bold" style="margin: 0;">Контакты</a>
             </div>
         </div>
     </div>
