--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
             </div>
         </div>
     </div>
-    <div class="main-content"></div>
+    <div class="main-content">
+        <div class="test">
+        </div>
+        <div class="test"></div>
+        <div class="test"></div>
+        <div class="test"></div>
+    </div>
     <div class="footer"></div>
 </body>
 </html>
