--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
         </a>
         <div class="info-container">
             <div class="info-container-top">
-                <div class="1c-logo">
-                    <img src="./img/logo/red_on_white_sized_2.png" alt="Логитип 1с" class="logo-container-img-1c-top">
+                <div class="info-container-top-logo-container">
+                    <div class="1c-logo">
+                        <img src="./img/logo/red_on_white_sized_3.png" alt="Логитип 1с" class="logo-container-img-1c">
+                    </div>
+                    <div class="algotitm-logo">
+                        <img src="./img/algoritmlogored.png" alt="Логитип АлгорИТм" class="logo-container-img-algoritm">
+                    </div>
                 </div>
                 <div class="info-container-top-text">
                     <p class="additional-text mrgn10">8:30 – 17:30 (MSK)</p>
