--- a/aboutus.html
+++ b/aboutus.html
@@ -4,10 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>О нас</title>
+    <title>Главная страница</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/aboutus.css">
 </head>
 <body>
-    
+    <div class="header">
+        <a href="./index.html" style="text-decoration: none;">
+            <div class="logo-container">
+                <div class="1c-logo">
+                    <img src="./img/logo/red_on_white_sized_2.png" alt="Логитип 1с" class="logo-container-img-1c">
+                </div>
+                <div class="algotitm-logo">
+                    <img src="./img/algoritmlogored.png" alt="Логитип АлгорИТм" class="logo-container-img-algoritm">
+                </div>
+            </div>
+        </a>
+        <div class="info-container">
+            <div class="info-container-top">
+                <div class="1c-logo">
+                    <img src="./img/logo/red_on_white_sized_2.png" alt="Логитип 1с" class="logo-container-img-1c-top">
+                </div>
+                <div class="info-container-top-text">
+                    <p class="additional-text mrgn10">8:30 – 17:30 (MSK)</p>
+                    <p class="bold">8 921 716-88-99</p>
+                </div>
+            </div>
+            <div class="info-container-bot">
+                <a href="#" class="links bold">Тарифы</a>
+                <a href="#" class="links bold">О нас</a>
+                <a href="#" class="links bold">Отзывы</a>
+                <a href="#" class="links bold" style="margin: 0;">Контакты</a>
+            </div>
+        </div>
+    </div>
+    <div class="main-content">
+        <div class="test">
+            <div class="aboutus-page">
+                <div class="founding-date">
+                    <div class="founding-date-image"><img src="img/girls.png"></div>
+                    <div class="founding-date-text">
+                        <h1>О компании</h1>
+                        <p style="font-size: 16px;">Российская фирма <<1C>> основана в 1991г.,специализируется на разработке, дистрибьюции, издании и поддержке компьютерных программ делового и домашнего назначения. Из собственных разработок фирмы <<1C>> наиболее известны программы системы <<1C:Предприятие>>.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer"></div>
 </body>
 </html>
