--- a/index.html
+++ b/index.html
@@ -1,54 +1,51 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная страница</title>
-    <link rel="stylesheet" href="./styles/style.css">
-</head>
-<body>
-    <div class="header">
-        <a href="./index.html" style="text-decoration: none;">
-            <div class="logo-container">
-                <div class="1c-logo">
-                    <img src="./img/logo/red_on_white_sized_3.png" alt="Логитип 1с" class="logo-container-img-1c">
-                </div>
-                <div class="algotitm-logo">
-                    <img src="./img/algoritmlogored.png" alt="Логитип АлгорИТм" class="logo-container-img-algoritm">
-                </div>
-            </div>
-        </a>
-        <div class="info-container">
-            <div class="info-container-top">
-                <div class="info-container-top-logo-container">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Главная страница</title>
+        <link rel="stylesheet" href="./styles/style.css">
+    </head>
+    <body>
+        <div class="header">
+            <a href="./index.html" style="text-decoration: none;">
+                <div class="logo-container">
                     <div class="1c-logo">
-                        <img src="./img/logo/red_on_white_sized_3.png" alt="Логитип 1с" class="logo-container-img-1c">
+                        <img src="./img/logo/red_on_white_sized_3.png" alt="Логитип 1с" class="img-1c">
                     </div>
                     <div class="algotitm-logo">
-                        <img src="./img/algoritmlogored.png" alt="Логитип АлгорИТм" class="logo-container-img-algoritm">
+                        <img src="./img/algoritmlogored.png" alt="Логитип АлгорИТм" class="img-algoritm">
                     </div>
                 </div>
-                <div class="info-container-top-text">
-                    <p class="additional-text mrgn10">8:30 – 17:30 (MSK)</p>
-                    <p class="bold">8 921 716-88-99</p>
+            </a>
+            <div class="info-container">
+                <div class="info-container-top">
+                    <div class="info-container-top-logo-container">
+                        <div class="1c-logo">
+                            <img src="./img/logo/red_on_white_sized_3.png" alt="Логитип 1с" class="img-1c">
+                        </div>
+                        <div class="algotitm-logo">
+                            <img src="./img/algoritmlogored.png" alt="Логитип АлгорИТм" class="img-algoritm">
+                        </div>
+                    </div>
+                    <div class="info-container-top-text">
+                        <p class="additional-text mrgn10">8:30 – 17:30 (MSK)</p>
+                        <p class="bold">8 921 716-88-99</p>
+                    </div>
+                </div>
+                <div class="info-container-bot">
+                    <a href="#" class="links bold">Тарифы</a>
+                    <a href="#" class="links bold">О нас</a>
+                    <a href="#" class="links bold">Отзывы</a>
+                    <a href="#" class="links bold" style="margin: 0;">Контакты</a>
                 </div>
             </div>
-            <div class="info-container-bot">
-                <a href="#" class="links bold">Тарифы</a>
-                <a href="#" class="links bold">О нас</a>
-                <a href="#" class="links bold">Отзывы</a>
-                <a href="#" class="links bold" style="margin: 0;">Контакты</a>
+        </div>
+        <div class="main-content">
+            <div class="test">
             </div>
         </div>
-    </div>
-    <div class="main-content">
-        <div class="test">
-        </div>
-        <div class="test"></div>
-        <div class="test"></div>
-        <div class="test"></div>
-    </div>
-    <div class="footer"></div>
-</body>
+        <div class="footer"></div>
+    </body>
 </html>
