--- a/aboutus.html
+++ b/aboutus.html
@@ -43,9 +43,14 @@
             <div class="aboutus-page">
                 <div class="founding-date">
                     <div class="founding-date-image"><img src="img/girls.png"></div>
-                    <div class="founding-date-text">
-                        <h1>О компании</h1>
-                        <p style="font-size: 16px;">Российская фирма <<1C>> основана в 1991г.,специализируется на разработке, дистрибьюции, издании и поддержке компьютерных программ делового и домашнего назначения. Из собственных разработок фирмы <<1C>> наиболее известны программы системы <<1C:Предприятие>>.</p>
+                        <h1 style="font-size: 36px; font-weight: bold;">О компании</h1>
+                    <div class="founding-date-text-container">
+                        <div class="founding-date-text">   
+                            Российская фирма <<1C>> основана в 1991г.,специализируется на разработке, дистрибьюции, издании и поддержке компьютерных программ делового и домашнегоназначения. Из собственных разработок фирмы <<1C>> наиболее известны программы системы <<1C:Предприятие>>.
+                        </div>
+                        <div class="algoritm-text">   
+                            Компания «АлгорИТм» - партнер фирмы «1C», оказывающий бухгалтерские услуги малому бизнесу под маркой «1C:БухОбслуживание» по единому стандарту и технологии оказания бухгалтерских услуг, разработанному в фирме 1C.
+                        </div>
                     </div>
                 </div>
             </div>
