start block alpha
Сделан гланый экран, добавлен блок о нас без стилей

--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Главная страница</title>
         <link rel="stylesheet" href="./styles/style.css">
+        <link rel="stylesheet" href="./styles/start.css">
+        <link rel="stylesheet" href="./styles/uslugi.css">
+        <link rel="stylesheet" href="./styles/tarrifs.css">
+        <link rel="stylesheet" href="./styles/audit.css">
         <link rel="stylesheet" href="./styles/aboutus.css">
+        <link rel="stylesheet" href="./styles/feedback.css">
+        <link rel="stylesheet" href="./styles/footer.css">
     </head>
     <body>
         <div class="header">
@@ -44,7 +50,40 @@
             </div>
         </div>
         <div class="main-content">
-            <div class="test">
+            <div class="bgimage center-text">
+                <h1 style="margin-top: 60px;">Поручите</h1>
+                <ul class="ulh">
+                    <li class="additional-text lih">БУХГАЛТЕРСКИЙ УЧЕТ</li>
+                    <li class="additional-text lih">КАДРОВЫЙ УЧЕТ</li>
+                    <li class="additional-text lih">НАЛОГОВЫЙ УЧЕТ</li>
+                </ul>
+                <h2 style="margin-top: 12px;">УЧЁТ БИЗНЕСА НАМ</h2>
+                <p class="header20" style="margin: 30px 0 37px 0;">Сосредоточьтесь на управлении бизнеса.<br>
+                    Учёт и отчётность мы возьмём на себя.</p>
+                <button class="btn">Хочу бугалтера</button>
+            </div>
+            <div class="main-content-wrapper">
+                <div class="Our-services">
+                    <div class="Our-ervices-container">
+                        <div class="Our-ervices-header"><p style="font-weight: bold; font-size: 32px;">Наши услуги</p></div>
+                        <div class="Our-ervices-list">
+                            <ul>
+                                <li style="padding-top: 28px;" class="about-li">Организация бухгалтерского учета</li>
+                                <li class="about-li">Автоматизация бух. Учета на рабочем месте</li>
+                                <li class="about-li">Ведение бух. Учета в полном объеме</li>
+                                <li class="about-li">Консультации по вопросам налогооблажения, работе в программе 1С</li>
+                                <li class="about-li">Восстановление бух. Учета</li>
+                                <li class="about-li">Сдача квартальной и годовой отчетности</li>
+                                <li class="about-li">Расчет финансового результата</li>
+                                <li class="about-li">Разработка кадровой и учетной политики для ведения учета</li>
+                                <li class="about-li">Ведение кадрового учета и делопроизводста</li>
+                                <li class="about-li">Формирование архива документов и рабочих баз клиента в любом виде</li>
+                                <li class="about-li">Мобильное приложение</li>
+                                <li class="about-li">Поддержка актуального состояния программ 1С</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="footer"></div>
