end of work day
Добавлены изображения, блоки

--- a/index.html
+++ b/index.html
@@ -6,13 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Главная страница</title>
         <link rel="stylesheet" href="./styles/style.css">
-        <link rel="stylesheet" href="./styles/start.css">
-        <link rel="stylesheet" href="./styles/uslugi.css">
-        <link rel="stylesheet" href="./styles/tarrifs.css">
-        <link rel="stylesheet" href="./styles/audit.css">
         <link rel="stylesheet" href="./styles/aboutus.css">
-        <link rel="stylesheet" href="./styles/feedback.css">
-        <link rel="stylesheet" href="./styles/footer.css">
     </head>
     <body>
         <div class="header">
@@ -81,6 +75,61 @@
                                 <li class="about-li">Мобильное приложение</li>
                                 <li class="about-li">Поддержка актуального состояния программ 1С</li>
                             </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="express-audit">
+                    <div class="express-audit-container">
+                        <div class="express-audit-image">
+                            <img src="img/Kalkulyator_transp.png" style="width: 131px; height: 423px; padding-left: 117px;">
+                        </div>
+                        <div class="express-audit-text-container">
+                            <div class="express-audit-text-header">Экспресс-аудит бухучета</div>
+                            <div class="express-audit-text">
+                                Проверьте учет в вашей компании  на ошибки. В течении дня вы получите отчет с рекомендациями по улучшению ведения учета. 
+                            </div>
+                            <div class="express-audit-button">
+                                <img src="img/Resurs_4_4x.png" style="width: 117px; height: 39px; transform: rotate(28deg); padding-left: 35%; padding-bottom: 4%;">
+                                <button class="audit-order-button"><p class="button-name">Заказать</p></button>
+                            </div>
+                            <div class="express-audit-description">
+                                Экспресс-аудит* представляет собой  выборочную проверку<br> состояния налогового и бухгалтерского учёта. Проводится<br> удалённо и позволяет выявить ошибки в отчётности 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="about-our-company">
+                    <div class="about-our-company-container">
+                        <div class="about-our-company-first">
+                            <div class="about-our-company-text-header">О нашей компании</div>
+                            <div class="about-our-company-text">
+                                Российская фирма <<1C>> основана в 1991г.,специализируется на разработке, дистрибьюции, издании и поддержке компьютерных программ делового и домашнегоназначения. Из собственных разработок фирмы <<1C>> наиболее известны программы системы <<1C:Предприятие>>.
+                            </div>
+                            <div class="about-our-company-text">
+                                Компания «АлгорИТм» - партнер фирмы «1C», оказывающий бухгалтерские услуги малому бизнесу под маркой «1C:БухОбслуживание» по единому стандарту и технологии оказания бухгалтерских услуг, разработанному в фирме 1C. Это позволяет контролировать качество оказываемых услуг учета (минимизировать количество ошибок, допускаемых в расчетах, в кадровом учете, при составлен регламентированной отчетности), повышая при этом эффективность работы специалистов. Реализована процедура централизованного аудита качества учета от Фирмы 1C.
+                            </div>
+                            <div>
+                                <img src="img/girls.png" style="width: 325px; height: 470px; padding-top: 8px;">
+                            </div>
+                        </div>
+                        <div class="about-our-company-second">
+                            <div>
+                                <img src="img/1CGirlsNewFin014_transp.png" style="width: 368px; height: 470px;">
+                            </div>
+                            <div class="about-our-company-text-second">
+                                Мы меняем философию бухгалтерского обслуживания!«1C:БухОбслуживание» - это «аквариум», а не «черный ящик», обслуживающая бухгалтерия 1C:БО прозрачна для клиента.
+                            </div>
+                            <div class="about-our-company-text-second">
+                                Для наших клиентов мы делаем бухгалтерский мир близким, дружелюбным и простым для понимания. Теперь Вы можете заниматься своим бизнесом, а не бухучетом. И в то же время имеете возможность контролировать свою бухгалтерию с любого компьютера с доступом в Интернет.
+                            </div>
+                            <div class="about-logo-container">
+                                <div class="about-1c-logo">
+                                    <img src="./img/logo/red_on_white_sized_3.png" alt="Логитип 1с" class="about-img-1c">
+                                </div>
+                                <div class="about-algotitm-logo">
+                                    <img src="./img/algoritmlogored.png" alt="Логитип АлгорИТм" class="about-img-algoritm ">
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
