--- a/index.html
+++ b/index.html
@@ -54,29 +54,31 @@
                 <h2 style="margin-top: 12px;">УЧЁТ БИЗНЕСА НАМ</h2>
                 <p class="header20" style="margin: 30px 0 37px 0;">Сосредоточьтесь на управлении бизнеса.<br>
                     Учёт и отчётность мы возьмём на себя.</p>
-                <button class="btn">Хочу бугалтера</button>
+                <button class="btn">
+                    <div class="">Хочу бугалтера</div>
+                </button>
             </div>
             <div class="main-content-wrapper">
-                <div class="Our-services">
-                    <div class="Our-ervices-container">
-                        <div class="Our-ervices-header"><p style="font-weight: bold; font-size: 32px;">Наши услуги</p></div>
-                        <div class="Our-ervices-list">
-                            <ul>
-                                <li style="padding-top: 28px;" class="about-li">Организация бухгалтерского учета</li>
-                                <li class="about-li">Автоматизация бух. Учета на рабочем месте</li>
-                                <li class="about-li">Ведение бух. Учета в полном объеме</li>
-                                <li class="about-li">Консультации по вопросам налогооблажения, работе в программе 1С</li>
-                                <li class="about-li">Восстановление бух. Учета</li>
-                                <li class="about-li">Сдача квартальной и годовой отчетности</li>
-                                <li class="about-li">Расчет финансового результата</li>
-                                <li class="about-li">Разработка кадровой и учетной политики для ведения учета</li>
-                                <li class="about-li">Ведение кадрового учета и делопроизводста</li>
-                                <li class="about-li">Формирование архива документов и рабочих баз клиента в любом виде</li>
-                                <li class="about-li">Мобильное приложение</li>
-                                <li class="about-li">Поддержка актуального состояния программ 1С</li>
-                            </ul>
+                <div class="warranty">
+                    <h2>Гарантируем</h2>
+                    <div class="block-container">
+                        <div class="block">
+                            <img src="./img/quality.png" alt="" class="warranty-img">
+                            <div>Качество работы</div>
+                        </div>
+                        <div class="block">
+                            <img src="./img/responsibility.png" alt="" class="warranty-img2">
+                            <div>Ответственность за <br> результат</div>
+                        </div>
+                        <div class="block">
+                            <img src="./img/defense.png" alt="" class="warranty-img">
+                            <div>Безопасность</div>
                         </div>
                     </div>
+                </div>
+                <div class="howitwork">
+                    <h2>Как это работает</h2>
+                    <img src="./img/howitwork.png" alt="" class="howitwork-img">
                 </div>
                 <div class="express-audit">
                     <div class="express-audit-container">
@@ -84,7 +86,7 @@
                             <img src="img/Kalkulyator_transp.png" style="width: 131px; height: 423px; padding-left: 117px;">
                         </div>
                         <div class="express-audit-text-container">
-                            <div class="express-audit-text-header">Экспресс-аудит бухучета</div>
+                            <div class="h2">Экспресс-аудит бухучета</div>
                             <div class="express-audit-text">
                                 Проверьте учет в вашей компании  на ошибки. В течении дня вы получите отчет с рекомендациями по улучшению ведения учета. 
                             </div>
@@ -101,7 +103,7 @@
                 <div class="about-our-company">
                     <div class="about-our-company-container">
                         <div class="about-our-company-first">
-                            <div class="about-our-company-text-header">О нашей компании</div>
+                            <div class="h2">О нашей компании</div>
                             <div class="about-our-company-text">
                                 Российская фирма <<1C>> основана в 1991г.,специализируется на разработке, дистрибьюции, издании и поддержке компьютерных программ делового и домашнегоназначения. Из собственных разработок фирмы <<1C>> наиболее известны программы системы <<1C:Предприятие>>.
                             </div>
