--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
         </div>
         <div class="main-content">
             <div class="bgimage center-text">
-                <h1 style="margin-top: 60px;">Поручите</h1>
+                <h1>Предоставьте</h1>
                 <ul class="ulh">
                     <li class="additional-text lih">БУХГАЛТЕРСКИЙ УЧЕТ</li>
                     <li class="additional-text lih">КАДРОВЫЙ УЧЕТ</li>
                     <li class="additional-text lih">НАЛОГОВЫЙ УЧЕТ</li>
                 </ul>
-                <h2 style="margin-top: 12px;">УЧЁТ БИЗНЕСА НАМ</h2>
-                <p class="header20" style="margin: 30px 0 37px 0;">Сосредоточьтесь на управлении бизнеса.<br>
+                <h2>УЧЁТ БИЗНЕСА НАМ</h2>
+                <p class="header20">Сосредоточьтесь на управлении бизнеса.<br>
                     Учёт и отчётность мы возьмём на себя.</p>
                 <button class="btn">
                     <div class="">Хочу бугалтера</div>
                 </button>
             </div>
             <div class="main-content-wrapper">
-                <div class="warranty">
+                <div class="warranty mrgnblk">
                     <h2>Гарантируем</h2>
                     <div class="block-container">
                         <div class="block">
@@ -76,17 +76,64 @@
                         </div>
                     </div>
                 </div>
-                <div class="howitwork">
+                <div class="howitwork mrgnblk">
                     <h2>Как это работает</h2>
                     <img src="./img/howitwork.png" alt="" class="howitwork-img">
                 </div>
-                <div class="express-audit">
+                <div class="tariffs">
+                    <div class="tariffs-container-header">Тарифы</div>
+                    <div class="tariffs-container">
+                        <div class="tariffs-blocks">
+                            <div class="tariffs-blocks-header">
+                                "Комплексный"
+                            </div>
+                            <div class="tariffs-blocks-text">
+                                Аутсорсер сам заводит все документы в программу и сам сдает отчетность. Клиент предоставляет только первичные документы.
+                            </div>
+                            <div class="tariffs-blocks-price" style="font-size: 20px;line-height: 140%; width: 200px; margin: 40px 79px 0 79px;">
+                                От - 2000р
+                            </div>
+                            <div>
+                                <button class="tariffs-blocks-button">Подробнее..</button>
+                            </div>
+                        </div>
+                        <div class="tariffs-blocks">
+                            <div class="tariffs-blocks-header">
+                                "Отчетность"
+                            </div>
+                            <div class="tariffs-blocks-text">
+                                Клиент сам заносит все документы в программу. Аутсорсер контролирует и сдает отчетность.
+                            </div>
+                            <div class="tariffs-blocks-price" style="font-size: 20px;line-height: 140%; width: 200px; margin: 84px 79px 0 79px;">
+                                От - 2000р
+                            </div>
+                            <div>
+                                <button class="tariffs-blocks-button">Подробнее..</button>
+                            </div>
+                        </div>
+                        <div class="tariffs-blocks">
+                            <div class="tariffs-blocks-header-three">
+                                "Нулевая отчетность"
+                            </div>
+                            <div class="tariffs-blocks-text">
+                                Аутсорсер  сдает отчетность.
+                            </div>
+                            <div class="tariffs-blocks-price" style="font-size: 20px;line-height: 140%; width: 200px; margin: 150px 79px 0 79px;">
+                                От - 2000р
+                            </div>
+                            <div>
+                                <button class="tariffs-blocks-button">Подробнее..</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="express-audit mrgnblk">
                     <div class="express-audit-container">
                         <div class="express-audit-image">
                             <img src="img/Kalkulyator_transp.png" style="width: 131px; height: 423px; padding-left: 117px;">
                         </div>
                         <div class="express-audit-text-container">
-                            <div class="h2">Экспресс-аудит бухучета</div>
+                            <h2>Экспресс-аудит бухучета</h2>
                             <div class="express-audit-text">
                                 Проверьте учет в вашей компании  на ошибки. В течении дня вы получите отчет с рекомендациями по улучшению ведения учета. 
                             </div>
@@ -100,15 +147,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="about-our-company">
+                <div class="about-our-company mrgnblk">
                     <div class="about-our-company-container">
                         <div class="about-our-company-first">
-                            <div class="h2">О нашей компании</div>
+                            <h2>О нашей компании</h2>
                             <div class="about-our-company-text">
-                                Российская фирма <<1C>> основана в 1991г.,специализируется на разработке, дистрибьюции, издании и поддержке компьютерных программ делового и домашнегоназначения. Из собственных разработок фирмы <<1C>> наиболее известны программы системы <<1C:Предприятие>>.
-                            </div>
-                            <div class="about-our-company-text">
-                                Компания «АлгорИТм» - партнер фирмы «1C», оказывающий бухгалтерские услуги малому бизнесу под маркой «1C:БухОбслуживание» по единому стандарту и технологии оказания бухгалтерских услуг, разработанному в фирме 1C. Это позволяет контролировать качество оказываемых услуг учета (минимизировать количество ошибок, допускаемых в расчетах, в кадровом учете, при составлен регламентированной отчетности), повышая при этом эффективность работы специалистов. Реализована процедура централизованного аудита качества учета от Фирмы 1C.
+                                Российская фирма <<1C>> основана в 1991г.,специализируется на разработке, дистрибьюции, издании и поддержке компьютерных программ делового и домашнегоназначения. Из собственных разработок фирмы <<1C>> наиболее известны программы системы <<1C:Предприятие>>. <br> <br> Компания «АлгорИТм» - партнер фирмы «1C», оказывающий бухгалтерские услуги малому бизнесу под маркой «1C:БухОбслуживание» по единому стандарту и технологии оказания бухгалтерских услуг, разработанному в фирме 1C. Это позволяет контролировать качество оказываемых услуг учета (минимизировать количество ошибок, допускаемых в расчетах, в кадровом учете, при составлен регламентированной отчетности), повышая при этом эффективность работы специалистов. Реализована процедура централизованного аудита качества учета от Фирмы 1C.
                             </div>
                             <div>
                                 <img src="img/girls.png" style="width: 325px; height: 470px; padding-top: 8px;">
@@ -119,10 +163,7 @@
                                 <img src="img/1CGirlsNewFin014_transp.png" style="width: 368px; height: 470px;">
                             </div>
                             <div class="about-our-company-text-second">
-                                Мы меняем философию бухгалтерского обслуживания!«1C:БухОбслуживание» - это «аквариум», а не «черный ящик», обслуживающая бухгалтерия 1C:БО прозрачна для клиента.
-                            </div>
-                            <div class="about-our-company-text-second">
-                                Для наших клиентов мы делаем бухгалтерский мир близким, дружелюбным и простым для понимания. Теперь Вы можете заниматься своим бизнесом, а не бухучетом. И в то же время имеете возможность контролировать свою бухгалтерию с любого компьютера с доступом в Интернет.
+                                Мы меняем философию бухгалтерского обслуживания!«1C:БухОбслуживание» - это «аквариум», а не «черный ящик», обслуживающая бухгалтерия 1C:БО прозрачна для клиента. <br> <br> Для наших клиентов мы делаем бухгалтерский мир близким, дружелюбным и простым для понимания. Теперь Вы можете заниматься своим бизнесом, а не бухучетом. И в то же время имеете возможность контролировать свою бухгалтерию с любого компьютера с доступом в Интернет.
                             </div>
                             <div class="about-logo-container">
                                 <div class="about-1c-logo">
