--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <span class="close">&times;</span>
-                                        <h2>Тариф комплексный</h2>
+                                        <h2>Тариф Комплексный</h2>
                                     </div>
                                     <div class="modal-body">
                                         <p>Некоторый текст в модальном теле</p>
@@ -129,7 +129,7 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <span class="close">&times;</span>
-                                        <h2>Тариф отчётность</h2>
+                                        <h2>Тариф Отчётность</h2>
                                     </div>
                                     <div class="modal-body">
                                         <p>Некоторый текст в модальном теле</p>
@@ -158,7 +158,7 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <span class="close">&times;</span>
-                                        <h2>Тариф нулевая отчётность</h2>
+                                        <h2>Тариф Нулевая Отчётность</h2>
                                     </div>
                                     <div class="modal-body">
                                         <p>Некоторый текст в модальном теле</p>
