--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button class="close" onclick="gg(this)">&times;</button>
-                                        <h2>Тариф Комплексный</h2>
+                                        <h2 class="tariff_name">Тариф Комплексный</h2>
                                     </div>
                                     <div class="tariff_btn">
                                         <button class="ip" onclick="ip(this)">ИП</button>
@@ -113,7 +113,7 @@
                                             <div id="ip">
                                                 <div class="tables-ip-container-tarif-complex">
                                                     <table border="1" cellspacing="0">
-                                                        <caption>Индивидуальный предприниматель с работниками</caption>
+                                                        <caption>Индивидуальный предприниматель с сотрудниками</caption>
                                                             <tr>
                                                                 <th>Система налогооблажения</th>
                                                                 <th>Количество документов</th>
@@ -214,7 +214,7 @@
                                                 </div>
                                                 <div class="tables-ip-container-tarif-complex-no-employees">
                                                     <table border="1" cellspacing="0">
-                                                        <caption>Индивидуальный предприниматель без работников</caption>
+                                                        <caption>Индивидуальный предприниматель без сотрудников</caption>
                                                             <tr>
                                                                 <th>Система налогооблажения</th>
                                                                 <th>Количество документов</th>
@@ -303,7 +303,6 @@
                                             <div id="ooo">
                                                 <div class="tables-ooo-container-tarif-complex">
                                                     <table border="1" cellspacing="0">
-                                                        <caption>Общество с ограниченной ответственностью</caption>
                                                             <tr>
                                                                 <th>Система налогооблажения</th>
                                                                 <th>Количество документов</th>
@@ -405,7 +404,7 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button class="close" onclick="gg(this)">&times;</button>
-                                        <h2>Тариф Отчётность</h2>
+                                        <h2 class="tariff_name">Тариф Отчётность</h2>
                                     </div>
                                     <div class="tariff_btn">
                                         <button class="ip" onclick="ip(this)">ИП</button>
@@ -415,7 +414,6 @@
                                         <div id="ip">
                                             <div class="tables-ip-container-tarif-reporting">
                                                 <table border="1" cellspacing="0">
-                                                    <caption>Тариф "Отчетность"</caption>
                                                         <tr>
                                                             <th>Система налогооблажения</th>
                                                             <th>
@@ -476,7 +474,6 @@
                                         <div id="ooo">
                                             <div class="tables-ooo-container-tarif-reporting">
                                                 <table border="1" cellspacing="0">
-                                                    <caption>Тариф "Отчетность"</caption>
                                                         <tr>
                                                             <th>Система налогооблажения</th>
                                                             <th>
@@ -543,7 +540,7 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button class="close" onclick="gg(this)">&times;</button>
-                                        <h2>Тариф Нулевая Отчётность</h2>
+                                        <h2 class="tariff_name">Тариф Нулевая Отчётность</h2>
                                     </div>
                                     <div class="tariff_btn">
                                         <button class="ip" onclick="ip(this)">ИП</button>
@@ -553,7 +550,6 @@
                                         <div id="ip">
                                             <div class="tables-ip-container-tarif-zero-reporting">
                                                 <table border="1" cellspacing="0">
-                                                    <caption>Тариф "Нулевая Отчетность"</caption>
                                                         <tr>
                                                             <th>Система налогооблажения</th>
                                                             <th>
@@ -614,7 +610,6 @@
                                         <div id="ooo">
                                             <div class="tables-ooo-container-tarif-zero-reporting">
                                                 <table border="1" cellspacing="0">
-                                                    <caption>Тариф "Нулевая Отчетность"</caption>
                                                         <tr>
                                                             <th>Система налогооблажения</th>
                                                             <th>
@@ -733,9 +728,18 @@
             function opn(elem) {
                 modal[elem.id].style.display = 'block';
                 body.style.overflow = "hidden";
+                for (let i = 0; i < modal.length; i++){
+                    ipbtn[i].style.backgroundColor = '#ffde41';
+                    ipb[i].style.display = 'block';
+                    ooob[i].style.display = 'none';
+                    ooobtn[i].style.backgroundColor = 'white';
+                }
             }
 
             function gg(elem) {
+                for (let i; i < ipbtn.length; i++){
+                    ipbtn[i].style.backgroundColor = '#ffde41';
+                }
                 for (let i = 0; i < modal.length; i++) {
                     modal[i].style.display = 'none';
                 }
@@ -748,7 +752,7 @@
                     ooobtn[i].style.backgroundColor = 'white';
                     ooob[i].style.display = 'none';
                 }
-                elem.style.backgroundColor = '#f3f3f3';
+                elem.style.backgroundColor = '#ffde41';
             }
 
             function ooo(elem) {
@@ -757,7 +761,7 @@
                     ipbtn[i].style.backgroundColor = 'white';
                     ooob[i].style.display = 'block';
                 }
-                elem.style.backgroundColor = '#f3f3f3';
+                elem.style.backgroundColor = '#ffde41';
             }
 
             document.addEventListener("click", function(evt) {
